[workspace]
resolver = "2"
members = [
    "crates/timeline_date"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
description = "Localised timeline-style date labels for Rust applications."
readme = "README.md"
repository = "https://github.com/triesap/timeline_date"
rust-version = "1.92.0"
keywords = ["date", "time", "i18n", "timeline", "localization"]
categories = ["date-and-time", "internationalization", "text-processing"]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
