[workspace]
resolver = "2"
members = [
    "crates/timeline_date"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
description = "Localised timeline-style date labels for Rust applications."
readme = "README.md"
repository = "https://github.com/triesap/timeline_date"
rust-version = "1.92.0"
keywords = ["date", "time", "i18n", "timeline", "localization"]
categories = ["date-and-time", "internationalization", "text-processing"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
icu_calendar = "2.2.0"
icu_datetime = "2.2.0"
icu_locale = "2.2.0"
insta = "1.43"
jiff = { version = "0.2.28", default-features = true }
mf2_i18n = { git = "ssh://git@github.com/triesap/mf2_i18n.git", rev = "e2ad58d5863d9dd98f2f38d1f08b2140bf34b0a1", default-features = false, features = ["embedded", "runtime", "std_backend"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uniffi = "0.31.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
