[package]
name = "timeline_date"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["std", "jiff", "mf2", "icu"]
std = []
jiff = ["dep:jiff"]
mf2 = []
icu = ["dep:icu_datetime"]
serde = ["dep:serde"]
uniffi = ["dep:uniffi"]

[dependencies]
icu_datetime = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
